# sent

./: .replit  AGENT_FLOW.md  DATABASE.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/py-api/: db.ts  index.ts
artifacts/api-server/src/py-api/agents/: base.ts  detectorAgents.ts  masterAgent.ts  reviewAgent.ts  textToSqlAgent.ts  trainingAgent.ts
artifacts/api-server/src/py-api/routes/: agents.ts  (+9 more)
artifacts/dup-detect/: index.html  package.json  requirements.yaml
artifacts/dup-detect/.replit-artifact/: artifact.toml
artifacts/dup-detect/src/: App.tsx  index.css
artifacts/dup-detect/src/contexts/: UserContext.tsx
artifacts/dup-detect/src/lib/: utils.ts
artifacts/dup-detect/src/pages/: AgentFlow.tsx  AgentPrompts.tsx  AgentTraining.tsx  Architecture.tsx  CorridorAnalysis.tsx  Dashboard.tsx  DataSchema.tsx  DuplicatesList.tsx  GraphChat.tsx  HowToUse.tsx  LoginPage.tsx  MasterConsole.tsx  PaymentDatabase.tsx
artifacts/py-api/: db.py  main.py  requirements.txt  seed_payments.py
artifacts/py-api/agents/: base_langgraph.py  detector_agents.py  master_agent.py  react_training_agent.py  review_agent.py  text_to_sql_agent.py  training_agent.py
artifacts/py-api/routes/: agents.py  console.py  dashboard.py  duplicates.py  exports.py  payments.py  schema.py  training.py  user_reviews.py
attached_assets/: Pasted-aining-Agent-Consulting-5-detector-agents-Memory-enable_1773589023415.txt
lib/api-spec/: openapi.yaml
(+4 files in other folders)
